font changed; fixed button height/width jumping on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ img {
 }
 
 h1 {
-  font-family: Cagliostro;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 2em;
   font-style: normal;
   font-variant: normal;
@@ -30,7 +30,7 @@ h1 {
 }
 
 p {
-  font-family: Cagliostro;
+  font-family: 'Ubuntu', sans-serif;
   font-size: 8vw;
   font-style: normal;
   font-variant: normal;
@@ -40,20 +40,23 @@ p {
 
 a {
   user-select: none;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 .button {
   background-color: #d9d9d9;
   -moz-border-radius: 28px;
   -webkit-border-radius: 28px;
-  border-radius: 28px;
+  border-radius: 20px;
   border: 1px solid #fff;
   display: inline-block;
   cursor: pointer;
   color: #000;
   font-size: 1.5em;
-  padding: 2% 2%;
+  padding: 3% 3%;
   text-decoration: none;
+  max-width: 200px;
+  max-height: 70px;
 }
 
 .button:hover {
